Fix dropdowns background color on Firefox (Fixes #20)

--- a/asset/sass/base/elements/_fields.scss
+++ b/asset/sass/base/elements/_fields.scss
@@ -16,6 +16,7 @@ input[type="color"],
 textarea,
 select {
     display: block;
+    background-color: $color__white;
     border: 1px solid $color__field-border;
     margin-bottom: 8px;
     padding: 10px 15px;
@@ -109,6 +110,7 @@ select {
     -moz-appearance: none; /* Firefox */
     -webkit-appearance: none; /* Safari and Chrome */
     appearance: none;
+    background-color: $color__white;
     background-image: url("../img/arrow-down-blue.svg");
     background-position: calc(100% - 15px) center;
     background-size: 18px;
